// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu component should Exist 1`] = `
Object {
  "$$typeof": Symbol(react.forward_ref),
  "List": Object {
    "$$typeof": Symbol(react.forward_ref),
    "Item": Object {
      "$$typeof": Symbol(react.forward_ref),
      "defaultProps": Object {
        "active": false,
        "children": null,
      },
      "render": [Function],
    },
    "render": [Function],
  },
  "defaultProps": Object {
    "as": "aside",
  },
  "render": [Function],
}
`;

exports[`Menu component should concat Menu.List to display as submenus 1`] = `
<aside
  className="menu"
>
  <p
    className="menu-label"
  >
    General
  </p>
  <ul
    className="menu-list"
  >
    <li>
      <a>
        Dashboard
      </a>
    </li>
    <li>
      <li>
        <a
          className="is-active"
        >
          Manage Your Team
        </a>
        <ul
          className="menu-list"
        >
          <li>
            <a>
              Members
            </a>
          </li>
          <li>
            <a
              className="is-active"
            >
              Plugins
            </a>
          </li>
          <li>
            <a>
              Add a member
            </a>
          </li>
        </ul>
      </li>
    </li>
  </ul>
</aside>
`;

exports[`Menu component should have menu classnames 1`] = `
<aside
  className="menu"
>
  <p
    className="menu-label"
  >
    General
  </p>
  <ul
    className="menu-list"
  >
    <li>
      <a>
        Dashboard
      </a>
    </li>
    <li>
      <a>
        Customer
      </a>
    </li>
  </ul>
</aside>
`;

exports[`Menu component should render custom item child 1`] = `
<aside
  className="menu"
>
  <p
    className="menu-label"
  >
    General
  </p>
  <ul
    className="menu-list"
  >
    <li>
      <p>
        Custom children 1
      </p>
    </li>
    <li>
      <a>
        Custom children 2
      </a>
    </li>
  </ul>
</aside>
`;
